fix the diversification width to 22% on smaller screen

--- a/source/stylesheets/nav.scss
+++ b/source/stylesheets/nav.scss
@@ -15,7 +15,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .menu .first-level .nav .l1-item.selected.diversification {
+  .menu .first-level .nav .l1-item.diversification {
     padding-left: 0;
     padding-right: 0;
     width: 22%;
